Game playable. Inventory mostly done.